k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botman-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
    - host: mahasvan.int
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  botmanservice
                port:
                  number: 80
